--- a/preamble.tex
+++ b/preamble.tex
@@ -1,1 +1,5 @@
 \usepackage{booktabs}
+
+\newcommand{\bbeta}{\bm{\beta}}
+\def\T{{ \mathrm{\scriptscriptstyle T} }}
+\newcommand{\pr}{\textnormal{pr}}
