--- a/docs/1.3-modeling-basics.md
+++ b/docs/1.3-modeling-basics.md
@@ -10,7 +10,7 @@ A simple linear regression assumes the underlying model $$Y = \beta_0 + {\boldsy
     library(MASS)
     data(Boston)
     # Fit a linear regression using all variables
-    fit = lm(medv~., data = Boston)
+    fit = lm(medv ~ ., data = Boston)
     summary(fit)
 ```
 
@@ -47,7 +47,35 @@ A simple linear regression assumes the underlying model $$Y = \beta_0 + {\boldsy
 ## F-statistic: 108.1 on 13 and 492 DF,  p-value: < 2.2e-16
 ```
 
+The output can be overwhelming for beginers. However, by specifying the model with `medv ~ .`, we are using all varaibles except `medv` as the predictors. And by default, an intercept term is also included. Instead, we could specify particular variables as predictors. For example
 
+
+```r
+    fit = lm(medv ~ rm + ptratio, data = Boston)
+    summary(fit)
+```
+
+```
+## 
+## Call:
+## lm(formula = medv ~ rm + ptratio, data = Boston)
+## 
+## Residuals:
+##     Min      1Q  Median      3Q     Max 
+## -17.672  -2.821   0.102   2.770  39.819 
+## 
+## Coefficients:
+##             Estimate Std. Error t value Pr(>|t|)    
+## (Intercept)  -2.5612     4.1889  -0.611    0.541    
+## rm            7.7141     0.4136  18.650   <2e-16 ***
+## ptratio      -1.2672     0.1342  -9.440   <2e-16 ***
+## ---
+## Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1
+## 
+## Residual standard error: 6.104 on 503 degrees of freedom
+## Multiple R-squared:  0.5613,	Adjusted R-squared:  0.5595 
+## F-statistic: 321.7 on 2 and 503 DF,  p-value: < 2.2e-16
+```
 
 
 
@@ -104,7 +132,7 @@ plot(Sales ~ TV, data = Advertising, col = "dodgerblue", pch = 20, cex = 1.5,
      main = "Sales vs Television Advertising")
 ```
 
-<img src="1.3-modeling-basics_files/figure-html/unnamed-chunk-5-1.png" width="672" />
+<img src="1.3-modeling-basics_files/figure-html/unnamed-chunk-6-1.png" width="672" />
 
 The `pairs()` function is a useful way to quickly visualize a number of scatter plots.
 
@@ -113,7 +141,7 @@ The `pairs()` function is a useful way to quickly visualize a number of scatter 
 pairs(Advertising)
 ```
 
-<img src="1.3-modeling-basics_files/figure-html/unnamed-chunk-6-1.png" width="672" />
+<img src="1.3-modeling-basics_files/figure-html/unnamed-chunk-7-1.png" width="672" />
 
 Often, we will be most interested in only the relationship between each predictor and the response. For this, we can use the `featurePlot()` function from the `caret` package. (We will use the `caret` package more and more frequently as we introduce new topics.)
 
@@ -123,7 +151,7 @@ library(caret)
 featurePlot(x = Advertising[ , c("TV", "Radio", "Newspaper")], y = Advertising$Sales)
 ```
 
-<img src="1.3-modeling-basics_files/figure-html/unnamed-chunk-7-1.png" width="960" />
+<img src="1.3-modeling-basics_files/figure-html/unnamed-chunk-8-1.png" width="960" />
 
 We see that there is a clear increase in `Sales` as `Radio` or `TV` are increased. The relationship between `Sales` and `Newspaper` is less clear. How all of the predictors work together is also unclear, as there is some obvious correlation between `Radio` and `TV`. To investigate further, we will need to model the data.
 
@@ -387,16 +415,16 @@ cat_pred
 ## # A tibble: 30 x 3
 ##    x1        x2      y
 ##    <fct>  <dbl>  <dbl>
-##  1 A     0.675   0.477
-##  2 A     0.238  -0.481
-##  3 A     0.705   0.809
-##  4 A     0.165   0.764
-##  5 A     0.361  -0.336
-##  6 A     0.773   0.326
-##  7 A     0.451  -1.57 
-##  8 A     0.934  -0.526
-##  9 A     0.399  -2.30 
-## 10 A     0.0802  1.44 
+##  1 A     0.290  -1.61 
+##  2 A     0.935   0.967
+##  3 A     0.0151 -0.142
+##  4 A     0.0117  0.494
+##  5 A     0.791  -2.09 
+##  6 A     0.678  -0.434
+##  7 A     0.225   0.910
+##  8 A     0.823   0.840
+##  9 A     0.0961 -0.300
+## 10 A     0.441  -0.130
 ## # ... with 20 more rows
 ```
 
@@ -412,7 +440,7 @@ coef(cat_pred_mod_add)
 
 ```
 ## (Intercept)         x1B         x1C          x2 
-##   0.5369823   0.3020017  -0.1777466  -1.4161010
+##   0.4107828  -0.2772976   0.2967362  -1.3017194
 ```
 
 
@@ -423,7 +451,7 @@ coef(cat_pred_mod_int)
 
 ```
 ## (Intercept)         x1B         x1C          x2      x1B:x2      x1C:x2 
-##  0.05807294  1.20366672  0.09572908 -0.41417787 -1.88067673  0.03969246
+## -0.12915936  1.09710568  0.92638917 -0.04782963 -4.04392503 -1.42974810
 ```
 
 
