--- a/index.Rmd
+++ b/index.Rmd
@@ -21,7 +21,7 @@ knitr::opts_chunk$set(fig.align = "center")
 
 # Preface {-}
 
-Welcome to Statistical Learning with R! I started this project during the summer of 2018 when I was preparing for the Stat 432 course. This course was taught by our former faculty member [Dr. David Dalpiaz](https://daviddalpiaz.com/teaching.html), who is currently at The Ohio State University. David introduced to me this awesome way of publishing website on GitHub, which is very efficient approach for developing courses. Since I was also teaching Stat 542 (Statistical Learning) during the previous two years, I figured it could be beneficial to integrate what I have to this [existing book](https://daviddalpiaz.github.io/r4sl/) by David, and use it as the R material for both courses. As you can tell, I am not being very creative on the name, so `SLWR' it is. You can find the source file of this book on my [GitHub](https://teazrq.github.io/SLWR/).
+Welcome to Statistical Learning with R! I started this project during the summer of 2018 when I was preparing for the Stat 432 course. This course was taught by our former faculty member [Dr. David Dalpiaz](https://daviddalpiaz.com/teaching.html), who is currently at The Ohio State University. David introduced to me this awesome way of publishing website on GitHub, which is a very efficient approach for developing courses. Since I was also teaching Stat 542 (Statistical Learning) during the previous two years, I figured it could be beneficial to integrate what I have to this [existing book](https://daviddalpiaz.github.io/r4sl/) by David and use it as the R material for both courses. As you can tell, I am not being very creative on the name, so `SLWR' it is. You can find the source file of this book on my [GitHub](https://teazrq.github.io/SLWR/).
 
 ## Target Audience {-}
 
@@ -33,8 +33,8 @@ I currently plan to include the following topics:
 
 1. Basics Knowledge
   + Statistics and Probability
-  + Using R, RStudio and R Markdown
-  + Optimization Prelimiaries
+  + Using R, RStudio, and R Markdown
+  + Optimization Preliminaries
 2. Linear and Penalized Linear Regressions
 3. Unsupervised Learning
 4. Classification
@@ -47,7 +47,7 @@ The goal of this book is to introduce not only how to run some of the popular st
 It will be served as a supplement to [An Introduction to Statistical Learning](http://www-bcf.usc.edu/~gareth/ISL/) [@james2013introduction] for [STAT 432 - Basics of Statistical Learning](https://go.illinois.edu/stat432) and [The Elements of 
 Statistical Learning: Data Mining, Inference, and Prediction](https://web.stanford.edu/~hastie/ElemStatLearn/) [@hastie2001elements] for [STAT 542 - Statistical Learning](https://go.illinois.edu/stat542) at the [University of Illinois at Urbana-Champaign](http://illinois.edu/).
 
-**This book is under active development** as I am teaching STAT 432 during Fall 2018. Hence, you may encounter errors ranging from typos, to broken code, to poorly explained topics. If you do, please let me know! Simply send an email and I will make the changes as soon as possible (`rqzhu AT illinois DOT edu`). Or, if you know `R Markdown` and are familiar with GitHub, [make a pull request and fix an issue yourself!](https://github.com/teazrq/SLWR). These contributions will be acknowledged. 
+**This book is under active development** as I am teaching STAT 432 during Fall 2018. Hence, you may encounter errors ranging from typos to broken code, to poorly explained topics. If you do, please let me know! Simply send an email and I will make the changes as soon as possible (`rqzhu AT illinois DOT edu`). Or, if you know `R Markdown` and are familiar with GitHub, [make a pull request and fix an issue yourself!](https://github.com/teazrq/SLWR). These contributions will be acknowledged. 
 
 ## Acknowledgements {-}
 
