--- a/docs/1.2-stat-prob-basics.md
+++ b/docs/1.2-stat-prob-basics.md
@@ -8,10 +8,10 @@ Random number generation is important for statistical simulation. R provides ran
 ```r
     # generate 10 independent Bernoulli random variables as a vector
     rbinom(n=10, size = 1, prob = 0.5)
-##  [1] 0 1 0 1 0 0 0 0 0 1
+##  [1] 1 0 0 0 1 1 1 0 1 0
     # 4 independent random standard normal variables
     rnorm(n=4)
-## [1] -0.60629004  0.01484334 -0.70251385  1.57949807
+## [1] 1.45180010 0.02590435 0.91152393 0.26830454
 ```
 
 Setting the seed before generating random numbers will allow us to replicate the results when necessary. 
@@ -26,7 +26,7 @@ Setting the seed before generating random numbers will allow us to replicate the
 ## [1] -0.2529076  1.3672866 -0.6712572  4.1905616
 ```
 
-Some more complicated distributions require additional package. For example, the `MASS` package can be used to generate multivariate normal distribution. One needs to specify a covariance matrix. 
+Some more complicated distributions require additional packages. For example, the `MASS` package can be used to generate the multivariate normal distribution. One needs to specify a covariance matrix. 
 
 ```r
     library(MASS)
@@ -41,7 +41,7 @@ Some more complicated distributions require additional package. For example, the
 
 ## Summary Statistics and Data Visualization
 
-Statistical functions that provides a summary of the data
+Statistical functions that provide a summary of the data
 
 ```r
     x = rnorm(n=100, mean = 1, sd = 2)
@@ -117,7 +117,7 @@ For continuous variables, data visualization can be very helpful. There are many
 
 <img src="1.2-stat-prob-basics_files/figure-html/unnamed-chunk-7-1.png" width="576" />
 
-Correlations and correlation plots can be used to summarize more varaibles. However, becareful that factors may not be supported by this feature and could cause errors. 
+Correlations and correlation plots can be used to summarize more variables. However, be careful that factors may not be supported by this feature and could cause errors. 
 
 ```r
     # load the package with loading message suppressed
@@ -127,7 +127,7 @@ Correlations and correlation plots can be used to summarize more varaibles. Howe
 
 <img src="1.2-stat-prob-basics_files/figure-html/unnamed-chunk-8-1.png" width="480" />
 
-3-dimentional plots are also alternative ways to visualize data. We demonstrate an example using the `plot3D` package and the `scatter3D` function. The package `rgl` can allow for interactive plot with rotating and zooming. 
+3-dimensional plots are also alternative ways to visualize data. We demonstrate an example using the `plot3D` package and the `scatter3D` function. The package `rgl` can allow for an interactive plot with rotating and zooming. 
 
 
 ```r
@@ -140,3 +140,4 @@ Correlations and correlation plots can be used to summarize more varaibles. Howe
 ```
 
 <img src="1.2-stat-prob-basics_files/figure-html/unnamed-chunk-9-1.png" width="576" />
+
